# vik

./: Cargo.toml  README.md
src/: editor.rs  event.rs  file.rs  lib.rs  logger.rs  main.rs  text_object.rs  ui.rs
src/buffer/: mod.rs  motions.rs
src/input/: command.rs  insert.rs  mod.rs  normal.rs
src/state/: command.rs  delete_operator.rs  insert.rs  mod.rs  normal.rs
src/text/: array.rs  mod.rs  piece_table.rs  piece_table_test.rs
src/text/piece_table/: iterator.rs  mod.rs  piece_table_test.rs  undo.rs
src/text_buffer/: array_buffer.rs  mod.rs
src/text_buffer/array_buffer/: mod.rs  motions.rs
src/text_buffer/piece_table_buffer/: mod.rs  motions.rs  piece_table.rs  piece_table_test.rs  text_ops.rs
src/ui/: draw.rs  mod.rs  text_window.rs
