[package]
name = "vik"
version = "0.1.0"
authors = ["kirby"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
log = { version = "0.4.11", features = ["max_level_debug", "release_max_level_warn"] }
log4rs = "0.13.0"
termion = "1.5"
tui = "0.11"
